* Removed "other emails" settings section which is no longer in use - REMOVED
* Grid view 1 added to Listing and Loop widget - ADDED
* Layout=1 in loop widget is now used for grid view 1 and layout=0 is used for list view (upgrade rectifies default content) - BREAKING CHANGE
* Font Awesome Pro now supported - ADDED
* Font Awesome Kits now supported - ADDED

= 2.0.0.59 =
* GD Listings widget title not working with pagination - FIXED
* Some fields are not stripping slashes - FIXED
* Include post date in exported files - ADDED
* "Unicon" theme compatibility for gd pages - ADDED
* Post Address widget now supports %%post_title%% - ADDED
* Sometimes when post revision is restored comment counts are reset to zero - FIXED
* $post_temp data is set to null for non GD posts to prevent issues when both inserted in same POST request - CHANGED
* Slider visible number sometimes not returning number which can cause ajax loading to break - FIXED
* Post images gallery has empty whitespace on the right in mobile - FIXED
* Business hours default offset should not account for DST - FIXED

= 2.0.0.58 =
* Sometimes distance value not showing on search page - FIXED
* Search with zip returns wrong address with OpenStreetMap - FIXED
* Badge not working for address field - FIXED
* Display email not working in elementor preview - FIXED
* Categories widget looses location on CPT switch - FIXED
* New non single use predefined custom fields should have ability to change field key - FIXED
* Post images widget can now be used as a carousel by setting the limit_show value when used as a slider - ADDED
* Sample CSV file updated to show new image format separator :: instead of , - FIXED
* Class geodir-featured added to body class if post is featured - ADDED
* Under certain settings configurations a user without editor privileges can set post status to revision - SECURITY

= 2.0.0.57 =
* Image extension with uppercase not showing in backend - FIXED